--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.5",
+    "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
