added plugins, changed plugins imports, configure eslint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "npm-run-all -p dev:*",
     "dev:server": "nodemon src/server.js",
     "dev:queue": "nodemon src/queue.js",
-    "debug": "nodemon --inspect src/server.js",
+    "debug:server": "nodemon --inspect src/server.js",
+    "debug:queue": "nodemon --inspect src/queue.js",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "bull": "^3.13.0",
     "bull-board": "^0.7.0",
+    "customize-cra": "^0.9.1",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -33,10 +35,13 @@
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/jest": "^25.1.4",
+    "babel-plugin-root-import": "^6.4.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
