--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev:queue": "nodemon src/queue.js",
     "debug:server": "nodemon --inspect src/server.js",
     "debug:queue": "nodemon --inspect src/queue.js",
-    "test": "NODE_ENV=test jest"
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "dependencies": {
     "@sentry/node": "^5.14.2",
@@ -51,6 +53,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.1",
     "sucrase": "^3.12.1"
   }
 }
