--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "yup": "^0.28.3"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.3",
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/jest": "^25.1.4",
     "babel-plugin-root-import": "^6.4.1",
@@ -47,6 +48,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
+    "mongodb": "^3.5.5",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
