--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.1.0",
+    "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
+    "jest": "^24.9.0",
     "mongodb": "^3.5.5",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
