--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "bcryptjs": "^2.4.3",
     "bull": "^3.13.0",
     "bull-board": "^0.7.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-brute": "^1.0.1",
+    "express-brute-redis": "^0.0.1",
     "express-handlebars": "^3.1.0",
+    "express-rate-limit": "^5.1.1",
+    "helmet": "^3.21.3",
     "ioredis": "^4.16.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
@@ -32,6 +37,8 @@
     "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
+    "rate-limit-redis": "^1.7.0",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.5",
     "youch": "^2.0.10",
     "yup": "^0.28.3"
