--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "barber-shop-backend",
+  "name": "node-backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -15,7 +15,7 @@
     "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "dependencies": {
-    "@sentry/node": "^5.14.2",
+    "@sentry/node": "^5.15.0",
     "bcryptjs": "^2.4.3",
     "bull": "^3.13.0",
     "bull-board": "^0.7.0",
@@ -31,10 +31,10 @@
     "helmet": "^3.21.3",
     "ioredis": "^4.16.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.4",
+    "mongoose": "^5.9.6",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.5",
-    "nodemailer-express-handlebars": "^3.1.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^3.3.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "rate-limit-redis": "^1.7.0",
@@ -44,23 +44,24 @@
     "yup": "^0.28.3"
   },
   "devDependencies": {
-    "@shelf/jest-mongodb": "^1.1.3",
+    "@shelf/jest-mongodb": "^1.1.5",
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/jest": "^25.1.4",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.2",
     "factory-girl": "^5.0.4",
     "faker": "^4.1.0",
-    "jest": "^24.9.0",
+    "ioredis-mock": "^4.19.0",
+    "jest": "^25.1.0",
     "mongodb": "^3.5.5",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.2",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.1",
     "sucrase": "^3.12.1",
